[package]
name = "conch-runtime"
version = "0.1.6"
edition = "2018"
authors = ["Ivan Petkov <ivanppetkov@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ipetkov/conch-runtime"
homepage = "https://github.com/ipetkov/conch-runtime"
documentation = "https://docs.rs/conch-runtime/"
keywords = ["shell", "runtime"]
categories = ["asynchronous"]
description = """
A library for evaluating/executing programs written in the shell programming language.
"""

[features]
default = ["conch-parser", "top-level"]
top-level = ["conch-parser"]

[dependencies]
conch-parser = { version = "0.1", optional = true }
clap        = "2"
failure     = "0.1"
failure_derive = "0.1"
futures     = "0.1.14"
futures-preview = { package = "futures-preview", version = "=0.3.0-alpha.18", features = ["compat"] }
futures-cpupool = "0.1.6"
glob        = "0.2"
lazy_static = ">=0.2, <=2"
mio  = "0.6.2"
rental = "0.5"
tokio-executor  = "=0.2.0-alpha.5"
tokio-io = "0.1"
tokio-process = "0.2"
tokio-reactor  = "0.1"
void = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.4"
features = [
  "fileapi",
  "handleapi",
  "minwindef",
  "namedpipeapi",
  "processenv",
  "processthreadsapi",
  "winbase",
  "winnt"
]

[dev-dependencies]
owned_chars = "0.3"
tempfile = "3.1"
tokio = "=0.2.0-alpha.5"

[badges]
travis-ci = { repository = "ipetkov/conch-runtime" }
appveyor = { repository = "ipetkov/conch-runtime" }
is-it-maintained-issue-resolution = { repository = "ipetkov/conch-runtime" }
is-it-maintained-open-issues = { repository = "ipetkov/conch-runtime" }
codecov = { repository = "ipetkov/conch-runtime" }
