[package]
name = "conch-runtime"
version = "0.1.6"
edition = "2018"
authors = ["Ivan Petkov <ivanppetkov@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ipetkov/conch-runtime"
homepage = "https://github.com/ipetkov/conch-runtime"
documentation = "https://docs.rs/conch-runtime/"
keywords = ["shell", "runtime"]
categories = ["asynchronous"]
description = """
A library for evaluating/executing programs written in the shell programming language.
"""

[features]
#default = ["conch-parser", "top-level"]
#top-level = ["conch-parser"]

[badges]
travis-ci = { repository = "ipetkov/conch-runtime" }
appveyor = { repository = "ipetkov/conch-runtime" }
is-it-maintained-issue-resolution = { repository = "ipetkov/conch-runtime" }
is-it-maintained-open-issues = { repository = "ipetkov/conch-runtime" }
codecov = { repository = "ipetkov/conch-runtime" }
